refactor: 整理驗證部分到中介層, 登入畫面調整
